# DamesIA

./: CMakeLists.txt
include/: Board.hpp  Man.hpp  Params.hpp  Piece.hpp  RingShape.hpp
src/: Board.cpp  Man.cpp  Params.cpp  Piece.cpp  RingShape.cpp  main.cpp
